--- a/animalAdoption/src/index.html
+++ b/animalAdoption/src/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
+  <title>Pet Adopter</title>
 </head>
 
 <body>
-  <div id="root">Not rendered</div>
+  <div id="modal"></div>
+  <div id="root">not rendered</div>
   <script src="./App.js"></script>
 </body>
 
